# chat_with_gh_repos_rag

./: .gitignore  Dockerfile  build_deploy.yaml  deploy_gke.yaml  kustomization.yaml  pyproject.toml
chat_with_gh_repos_rag/app/: app.py
chat_with_gh_repos_rag/services/: create_qdrant_collection.py
