[tool.poetry]
name = "chat-with-gh-repos-rag"
version = "0.1.0"
description = ""
authors = ["zahar <zaharalex25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
githubclient = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
